rolled back git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ db/*.sqlite3
 .rspec
 .redcar/
 .sass-cache
-# /config/database.yml
+/config/config.yml
+/config/database.yml
 /coverage.data
 /coverage/
 /db/*.javadb/
